Tycho build: run GroovyJDTTests in the build